<resources>
    <string name="app_name">SprintProject</string>
    <!-- for login / create account -->
    <string name="login_title">Log In</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create an Account</string>
    <string name="username">Username: </string>
    <string name="username_hint">Enter Username: </string>
    <string name="password_hint">Enter Password: </string>
    <string name="password">Password: </string>
    <!-- for create account -->
    <string name="register">Register</string>
    <!-- for main feature screens headers -->
    <string name="dining_establishments">Dining Establishments</string>
    <string name="placeholder">Placeholder</string>
    <string name="logistics">Logistics</string>
    <string name="destination">Destination</string>
    <string name="accommodation">Accommodation</string>
    <string name="transportation">Transportation</string>
    <string name="travel_community">Travel Community</string>

    <string name="total_travel_days">Total Travel Days: %1$d</string>
    <string name="travel_duration">Duration: %1$d days</string>
    <string name="total_planned_days">Total Planned Days: %1$d</string>


    <string name="accommodations_header">Accommodations</string>
    <string name="location_hint">Location</string>
    <string name="checkin_date_hint">Check-In Date</string>
    <string name="checkout_date_hint">Check-Out Date</string>
    <string name="num_rooms_hint">Number of Rooms</string>
    <string name="room_type_hint">Room Type</string>
    <string name="add_accommodation">Add Accommodation</string>
    <string name="room_type_prompt">Room Type</string>


    <string-array name="room_types">
        <item>King Suite</item>
        <item>Triple Room</item>
        <item>Double Room</item>
        <item>Single Room</item>
    </string-array>


</resources>